Fix scrolling issues on iphone

--- a/assets/openrov/css/mobile.scss
+++ b/assets/openrov/css/mobile.scss
@@ -507,6 +507,7 @@ article#home {
             right: 0;
             bottom: 0;
             position: absolute;
+            overflow-y: scroll;
         }
     }
 }
